# get-sesami

./: README.md  samconfig.toml  template.yaml
rust_app/: Cargo.toml
rust_app/src/: main.rs
