[package]
name = "get-sesami"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.55.3"
aws-sdk-dynamodb = "0.28.0"
aws-sdk-ssm = "0.28.0"
lambda_http = "0.8.1"

lambda_runtime = "0.6.0"
serde = "1.0.136"
serde_json = "1.0.103"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
